<resources>
    <string name="app_name">m4_components</string>
    <string name="user_image">User image</string>
    <string name="hint_name">Имя</string>
    <string name="hint_phone">Телефон</string>
    <string name="sex">Пол</string>
    <string name="male">М</string>
    <string name="female">Ж</string>
    <string name="points">Баллы</string>
    <string name="switch_notification">Получать уведомления</string>
</resources>