<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:id="@+id/userImage"
            android:src="@drawable/icons8___160"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/user_image"
            android:layout_marginTop="32dp"/>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            app:endIconMode="clear_text"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:layout_constraintTop_toBottomOf="@+id/userImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:hint="@string/hint_phone"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputPhone"
                android:inputType="phone"
                android:background="#BB86FC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/textViewSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textSize="16sp"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/inputLayoutPhone"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutPhone"
            android:layout_marginTop="16dp"/>

    <RadioGroup
            android:id="@+id/radioGroupForChoiceSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewSex"
            app:layout_constraintStart_toStartOf="@id/textViewSex"
            android:layout_marginTop="16dp">
        <RadioButton
                android:id="@+id/radioButtonMale"
                android:text="@string/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <RadioButton
                android:id="@+id/radioButtonFemale"
                android:text="@string/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RadioGroup>

    <Switch
            android:id="@+id/switchNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_notification"
            app:layout_constraintTop_toBottomOf="@id/radioGroupForChoiceSex"
            app:layout_constraintStart_toStartOf="@id/radioGroupForChoiceSex"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            tools:ignore="UseSwitchCompatOrMaterialXml"/>

    <TextView
            android:id="@+id/textViewPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points"
            android:textSize="16sp"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/inputLayoutPhone"
            app:layout_constraintTop_toBottomOf="@+id/switchNotification"
            android:layout_marginTop="16dp"/>

    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/inputLayoutName"
            app:layout_constraintEnd_toEndOf="@id/inputLayoutPhone"
            app:layout_constraintTop_toBottomOf="@+id/textViewPoints"
            android:layout_marginTop="16dp"
            tools:visibility="visible" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>